--- a/doc-website/src/css/custom.css
+++ b/doc-website/src/css/custom.css
@@ -6,13 +6,14 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #ffb703;
+  --ifm-color-primary-dark: #e8a600;
+  --ifm-color-primary-darker: #db9d00;
+  --ifm-color-primary-darkest: #b58100;
+  --ifm-color-primary-light: #ffbe1d;
+  --ifm-color-primary-lighter: #ffc22a;
+  --ifm-color-primary-lightest: #ffcd50;
+  --ifm-background-color: #fafaff;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
